--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </style>
 </head>
 <body>
-  <script type="text/javascript" src="test-data.js"></script>
-  <script type="text/javascript" src="elm.min.js"></script>
+  <script type="text/javascript" src="website/js/test-data.js"></script>
+  <script type="text/javascript" src="website/js/elm.js"></script>
   <script type="text/javascript">
     var app = Elm.Main.fullscreen({
       data: points
