--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       html,head,body { padding:0; margin:0; }
       body { font-family: calibri, helvetica, arial, sans-serif; }
     </style>
+    <link rel="stylesheet" href="website/css/main.css">
 </head>
 <body>
   <script type="text/javascript" src="website/js/test-data.js"></script>
